--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
+
 <html lang="en-us">
 
 <head>
+
     <meta charset="UTF-8" />
+
     <link rel="stylesheet" href="./assets/css/style.css">
+
     <title>website</title>
+
 </head>
 
 <body>
+
     <div class="header">
+
         <h1>Hori<span class="seo">seo</span>n</h1>
+
         <div>
+
             <ul>
+
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
+
                 <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
                 </li>
+
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
+
             </ul>
+
         </div>
+
     </div>
-    <div class="hero"></div>
+
+    <!-- Background photo of webpage -->
+    <figure class="hero"></figure>
 
     <!-- Main body of text -->
-    <div class="content">
+    <main class="content">
 
-        <div class="search-engine-optimization">
+        <section class="search-engine-optimization">
 
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO Components Thought Bubble" />
 
@@ -39,9 +56,9 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
 
-        </div>
+        </section>
 
-        <div id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="online-reputation-management">
 
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation" />
 
@@ -51,9 +68,9 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
 
-        </div>
+        </section>
 
-        <div id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="social-media-marketing">
 
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Variety of Social Media Platform" />
 
@@ -63,9 +80,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
 
-        </div>
+        </section>
 
-    </div>
+    </main>
 
     <!-- Benefit column on right-hand side of webpage -->
     <aside class="benefits">
