--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
 <body>
 
-    <div class="header">
+    <!-- Header at top of webpage -->
+    <header>
 
         <h1>Hori<span class="seo">seo</span>n</h1>
 
-        <div>
+        <nav>
 
             <ul>
 
@@ -36,9 +37,9 @@
 
             </ul>
 
-        </div>
+        </nav>
 
-    </div>
+    </header>
 
     <!-- Background photo of webpage -->
     <figure class="hero"></figure>
@@ -46,7 +47,7 @@
     <!-- Main body of text -->
     <main class="content">
 
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
 
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO Components Thought Bubble" />
 
