added title, made a couple more organization adjustments, added README file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>website</title>
+    <title>Horiseon Social Solutions Services, Inc.</title>
 
 </head>
 
@@ -42,7 +42,7 @@
     </header>
 
     <!-- Background photo of webpage -->
-    <figure class="hero"></figure>
+    <img class="hero"></img>
 
     <!-- Main body of text -->
     <main class="content">
